Modif sur l'index, 8 ièm section, reste plus que les img | création page emploi et mis en forme des deux block

--- a/emploi.html
+++ b/emploi.html
@@ -53,7 +53,10 @@
         <!---->
         <!---->
         <section class="column bg-light main">
+            <!---->
             <h1 class="text-center text-dark-gray-30">Kinshasa Digital Recrute</h1>
+            <!---->
+            <!---->
             <div class="row content-style-evenly padding-top-down-6">
                 <div class="bg-gray my-width-40 padding-left-right-2 radius-all-10">
                     <h2 class="text-big-1">
@@ -114,6 +117,8 @@
                         </a>
                     </p>
                 </div>
+                <!---->
+                <!---->
                 <div class="bg-gray my-width-40 padding-left-right-2 radius-all-10">
                     <h2 class="text-big-1">
                         Développeur
@@ -184,11 +189,156 @@
                         </a>
                     </p>
                 </div>
+                <!---->
+            </div>
+            <!---->
+            <!---->
+            <div class="bg-dark padding-top-down-6">
+                <h2 class="text-gray-50 text-center">
+                    Formulaire de contact
+                </h2>
+                <p class="text-center text-bold text-light">
+                    Si vous souhaitez-vous préinscrire à la Kinshasa Digital
+                    Academy veuillez remplir le
+                    <a class="link-bold" href="#">
+                        formulaire de préinscription
+                    </a>.
+                </p>
+                <form class="column my-width-100">
+                    <!---->
+                    <div class="row item-style-top content-style-evenly">
+                        <!---->
+                        <div class="column content-style-evenly my-width-45">
+                            <div>
+                                <p>
+                                    <label class="text-light" for="title">
+                                        Quel titre vous décrit le mieux ?
+                                    </label>
+                                </p>
+                                <p>
+                                    <select class="form-input" name="title" id="title">
+                                        <option value="" disabled="disabled" selected> </option>
+                                        <option value="Consultant">Consultant</option>
+                                        <option value="Entrepreneur">Entrepreneur</option>
+                                        <option value="Etudiant">Etudiant</option>
+                                        <option value="Représentant d'une Start-up">Représentant d'une Start-up</option>
+                                        <option value="Représentant d'une PME">Représentant d'une PME</option>
+                                        <option value="Représentant d'une Grande entreprise">
+                                            Représentant d'une Grande entreprise
+                                        </option>
+                                        <option value="Représentant d'une ONG">Représentant d'une ONG</option>
+                                        <option value="Autre">Autre</option>
+                                    </select>
+                                </p>
+                            </div>
+                            <p>
+                                <input class="form-input" type="text" name="prenom" id="prenom" placeholder="Prénom">
+                            </p>
+                            <p>
+                                <input class="form-input" type="text" name="nom" id="nom" placeholder="nom">
+                            </p>
+                            <p>
+                                <input class="form-input" type="tel" name="telephone" id="telephone"
+                                    placeholder="Télephone">
+                            </p>
+                            <p>
+                                <input class="form-input" type="email" name="email" id="email" placeholder="E-mail">
+                            </p>
+                        </div>
+                        <!---->
+                        <!---->
+                        <div class="column content-style-evenly my-width-45">
+
+                            <div>
+                                <p>
+                                    <label class="text-light" for="secteur">Secteur d'activité</label>
+                                </p>
+                                <p>
+                                    <select class="form-input" name="secteur" id="secteur">
+                                        <option value="" disabled="disabled" selected> </option>
+                                        <option value="Agriculture et foresterie">Agriculture et foresterie</option>
+                                        <option value="Aéroport">Aéroport</option>
+                                        <option value="Construction">Construction</option>
+                                        <option value="Exportateur">Exportateur</option>
+                                        <option value="Education">Education</option>
+                                    </select>
+                                </p>
+                            </div>
+
+                            <p>
+                                <input class="form-input" type="text" name="nomEntreprise" id="nomEntreprise"
+                                    placeholder="Nom de votre entreprise">
+                            </p>
+                            <p>
+                                <input class="form-input" type="text" name="siteWeb" id="siteWeb"
+                                    placeholder="Site Web">
+                            </p>
+                            <p>
+                                <input class="form-input" type="text" name="ville" id="ville" placeholder="Ville">
+                            </p>
+                        </div>
+                        <!---->
+                    </div>
+                    <!---->
+                    <div class="column content-style-evenly item-style-center">
+                        <div class="column my-width-93">
+                            <p>
+                                <label class="text-light" for="TypeDemande">Type de demande</label>
+                            </p>
+                            <p>
+                                <select class="form-input" name="TypeDemande" id="TypeDemande">
+                                    <option value="" disabled="disabled" selected> </option>
+                                    <option value="développement site internet">
+                                        Développement : Site internet
+                                    </option>
+                                    <option value="développement application mobile">
+                                        Développement : Application mobile
+                                    </option>
+                                    <option value="Développement application gestion">
+                                        Développement : Application Gestion
+                                    </option>
+                                    <option value="Autre">Autre</option>
+                                </select>
+                            </p>
+                        </div>
+                        <p class="row my-width-93">
+                            <textarea class="form-input" name="" id="" cols="30" rows="10" placeholder="Demande : 
+                            merci d'indiquer le maximum de précision 
+                            afin qu'on puisse vous donner une réponse complète"
+                                style="resize: none; overflow-y: scroll; height: 134px; width:100%">
+
+                            </textarea>
+                        </p>
+                        <p class="my-width-93 text-light">
+                            Dû à un nombre important de demandes, nous ne traiterons
+                            pas les messages concernant les
+                            inscriptions à KDA, inscrivez-vous à l’aide du
+                            <br>
+                            <a class="link-normal" href="#">formulaire</a>.
+                            <br>
+                            Pour toute demande de devis, merci de nous donner
+                            le maximum de détails possible afin de nous
+                            aider à vous répondre le plus précisément
+                            <br>
+                            possible
+                        </p>
+                        <div class="row my-width-93 content-style-left">
+                            <p class="margin-top-down-40">
+                                <button
+                                    class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-text-light-hover"
+                                    href="#">
+                                    envoyer
+                                </button>
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                </form>
             </div>
         </section>
         <!---->
         <!---->
-        <footer class="bg-dark my-footer"></footer>
+        <footer class="bg-dark-gray-50 my-footer"></footer>
     </div>
 </body>
 
