Modif après passage dans le validateur

--- a/emploi.html
+++ b/emploi.html
@@ -217,7 +217,7 @@
                                 </p>
                                 <p>
                                     <select class="form-input" name="title" id="title">
-                                        <option value="" disabled="disabled" selected> </option>
+                                        <option value="" disabled="disabled" selected>Titre</option>
                                         <option value="Consultant">Consultant</option>
                                         <option value="Entrepreneur">Entrepreneur</option>
                                         <option value="Etudiant">Etudiant</option>
@@ -255,7 +255,7 @@
                                 </p>
                                 <p>
                                     <select class="form-input" name="secteur" id="secteur">
-                                        <option value="" disabled="disabled" selected> </option>
+                                        <option value="" disabled="disabled" selected>Secteur</option>
                                         <option value="Agriculture et foresterie">Agriculture et foresterie</option>
                                         <option value="Aéroport">Aéroport</option>
                                         <option value="Construction">Construction</option>
@@ -287,7 +287,7 @@
                             </p>
                             <p>
                                 <select class="form-input" name="TypeDemande" id="TypeDemande">
-                                    <option value="" disabled="disabled" selected> </option>
+                                    <option value="" disabled="disabled" selected>Type de demande</option>
                                     <option value="développement site internet">
                                         Développement : Site internet
                                     </option>
@@ -302,7 +302,7 @@
                             </p>
                         </div>
                         <p class="row my-width-93">
-                            <textarea class="form-input" name="" id="" cols="30" rows="10" placeholder="Demande : 
+                            <textarea class="form-input" name="demande" id="demande" cols="30" rows="10" placeholder="Demande : 
                             merci d'indiquer le maximum de précision 
                             afin qu'on puisse vous donner une réponse complète"
                                 style="resize: none; overflow-y: scroll; height: 134px; width:100%">
@@ -325,8 +325,7 @@
                         <div class="row my-width-93 content-style-left">
                             <p class="margin-top-down-40">
                                 <button
-                                    class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-text-light-hover"
-                                    href="#">
+                                    class="btn btn-border-red text-light btn-lg bg-red btn-out-line-red-text-light-hover">
                                     envoyer
                                 </button>
                             </p>
