Modif pages index et emploi ajout du footer

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 </div>
                 <div class="column my-width-50 content-style-evenly">
                     <div class="row content-style-evenly">
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                        <div class="my-width-40 my-heigth-40 bg-light radius-all-10 margin-all-10 padding-all-1">
                             <p>IMG</p>
                             <h5>
                                 Rémunération
@@ -522,7 +522,7 @@
                                 salaire moyen de la RDC.
                             </p>
                         </div>
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                        <div class="my-width-40 my-heigth-40 bg-light radius-all-10 margin-all-10 padding-all-1">
                             <p>IMG</p>
                             <h5>
                                 Infrastructure pro
@@ -536,7 +536,7 @@
                         </div>
                     </div>
                     <div class="row content-style-evenly">
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                        <div class="my-width-40 my-heigth-40 bg-light radius-all-10 margin-all-10 padding-all-1">
                             <p>IMG</p>
                             <h5>
                                 Couverture santé
@@ -548,7 +548,7 @@
                                 Kinshasa
                             </p>
                         </div>
-                        <div class="my-width-40 my-heigth-50 bg-light radius-all-10 margin-all-10 padding-all-1">
+                        <div class="my-width-40 my-heigth-40 bg-light radius-all-10 margin-all-10 padding-all-1">
                             <p>IMG</p>
                             <h5>
                                 Formation continue
@@ -567,7 +567,47 @@
         </section>
         <!---->
         <!---->
-        <footer class="bg-dark my-footer"></footer>
+        <footer class="row content-style-center item-style-top padding-top-down-6 bg-dark-gray-50 my-footer">
+            <div class="my-width-45 margin-left-right-20">
+                <address class="text-light margin-top-down-20">
+                    <strong>Kinshasa Digital</strong><br>
+                    Texaf Digital Campus<br>
+                    Concession COTEX (Référence: en face de l’Ambassade de France)<br>
+                    N° 63 Avenue Colonel Mondjiba<br>
+                    Commune de Ngaliema - Kinshasa<br>
+                    République Démocratique du Congo<br>
+                </address>
+                <div>
+                    <a class="link-normal" href="#">info@kinshasadigital.com</a>
+                    <br>
+                    <a class="link-normal" href="#">+243 891 341 236</a>
+                </div>
+                <p>
+                    <img src="img/svg/facebook.svg" alt="logo facebook">
+                    <img src="img/svg/twitter.svg" alt="logo twitter">
+                    <img src="img/svg/linkedin.svg" alt="logo linkedin">
+                </p>
+            </div>
+            <div class="my-width-45 margin-left-right-20">
+                <p class="text-light">
+                    Inscrivez-vous à notre <strong>newsletter</strong>
+                    pour vous tenir au courant de nos activités.
+                </p>
+                <div class="">
+                    <form>
+                        <input class="input-coller-right" type="text" name="signInNews" id="signInNews"
+                            placeholder="Adresse E-mail"><button
+                            class="btn-coller-left bg-red text-light">S'inscrire</button>
+                    </form>
+                </div>
+                <div class="column content-style-end my-heigth-40">
+                    <h6 class="">
+                        <a class="link text-light" href="#">Mentions Légales</a>
+                    </h6>
+                </div>
+            </div>
+        </footer>
+        <!---->
     </div>
 </body>
 
