--- a/emploi.html
+++ b/emploi.html
@@ -337,7 +337,46 @@
         </section>
         <!---->
         <!---->
-        <footer class="bg-dark-gray-50 my-footer"></footer>
+        <footer class="row content-style-center item-style-top padding-top-down-6 bg-dark-gray-50 my-footer">
+            <div class="my-width-45 margin-left-right-20">
+                <address class="text-light margin-top-down-20">
+                    <strong>Kinshasa Digital</strong><br>
+                    Texaf Digital Campus<br>
+                    Concession COTEX (Référence: en face de l’Ambassade de France)<br>
+                    N° 63 Avenue Colonel Mondjiba<br>
+                    Commune de Ngaliema - Kinshasa<br>
+                    République Démocratique du Congo<br>
+                </address>
+                <div>
+                    <a class="link-normal" href="#">info@kinshasadigital.com</a>
+                    <br>
+                    <a class="link-normal" href="#">+243 891 341 236</a>
+                </div>
+                <p>
+                    <img src="img/svg/facebook.svg" alt="logo facebook">
+                    <img src="img/svg/twitter.svg" alt="logo twitter">
+                    <img src="img/svg/linkedin.svg" alt="logo linkedin">
+                </p>
+            </div>
+            <div class="my-width-45 margin-left-right-20">
+                <p class="text-light">
+                    Inscrivez-vous à notre <strong>newsletter</strong>
+                    pour vous tenir au courant de nos activités.
+                </p>
+                <div class="">
+                    <form>
+                        <input class="input-coller-right" type="text" name="signInNews" id="signInNews"
+                            placeholder="Adresse E-mail"><button
+                            class="btn-coller-left bg-red text-light">S'inscrire</button>
+                    </form>
+                </div>
+                <div class="column content-style-end my-heigth-40">
+                    <h6 class="">
+                        <a class="link text-light" href="#">Mentions Légales</a>
+                    </h6>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
