Modif pages index et emploi, animation lien navbar fait. finalisation. reste quelques animations

--- a/emploi.html
+++ b/emploi.html
@@ -27,22 +27,26 @@
                             <li>
                                 <a href="index.html">
                                     Accueil
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                             <li>
                                 <a href="#">
                                     Academy
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                             <li>
-                                <a class="nav-active" href="emploi.html">
+                                <a href="emploi.html">
                                     Emploi
-                                </a>
+                                </a><br>
+                                <span class="nav-active"></span>
                             </li>
                             <li>
                                 <a href="#">
                                     Contact
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                         </ul>
                     </nav>
