--- a/index.html
+++ b/index.html
@@ -25,24 +25,28 @@
                     <nav>
                         <ul class="">
                             <li>
-                                <a class="nav-active" href="index.html">
+                                <a href="index.html">
                                     Accueil
-                                </a>
+                                </a><br>
+                                <span class="nav-active"></span>
                             </li>
                             <li>
                                 <a href="#">
                                     Academy
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                             <li>
                                 <a href="emploi.html">
                                     Emploi
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                             <li>
                                 <a href="#">
                                     Contact
-                                </a>
+                                </a><br>
+                                <span></span>
                             </li>
                         </ul>
                     </nav>
