Modif pages index et emploi, animation lien navbar et footer fait. finalisation. reste quelques animations

--- a/emploi.html
+++ b/emploi.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Kinshasa Digital Recrute</title>
@@ -351,16 +354,36 @@
                     Commune de Ngaliema - Kinshasa<br>
                     République Démocratique du Congo<br>
                 </address>
-                <div>
-                    <a class="link-normal" href="#">info@kinshasadigital.com</a>
-                    <br>
-                    <a class="link-normal" href="#">+243 891 341 236</a>
+                <div class="footer-contact">
+                    <div class="under-line my-width-45">
+                        <a class="link-normal" href="#">info@kinshasadigital.com</a><br>
+                        <span></span>
+                    </div>
+                    <div class="under-line my-width-32">
+                        <a class="link-normal" href="#">+243 891 341 236</a><br>
+                        <span></span>
+                    </div>
                 </div>
-                <p>
-                    <img src="img/svg/facebook.svg" alt="logo facebook">
-                    <img src="img/svg/twitter.svg" alt="logo twitter">
-                    <img src="img/svg/linkedin.svg" alt="logo linkedin">
-                </p>
+                <div class="row content-style-between my-width-30 margin-top-down-20 social-media">
+                    <div class="under-line">
+                        <a class="" href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a><br>
+                        <span></span>
+                    </div>
+                    <div class="under-line">
+                        <a class="" href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a><br>
+                        <span></span>
+                    </div>
+                    <div class="under-line">
+                        <a class="" href="#">
+                            <i class="fab fa-linkedin"></i>
+                        </a><br>
+                        <span></span>
+                    </div>
+                </div>
             </div>
             <div class="my-width-45 margin-left-right-20">
                 <p class="text-light">
@@ -375,8 +398,9 @@
                     </form>
                 </div>
                 <div class="column content-style-end my-heigth-40">
-                    <h6 class="">
-                        <a class="link text-light" href="#">Mentions Légales</a>
+                    <h6 class="under-line my-width-26">
+                        <a class="link text-light" href="#">Mentions Légales</a><br>
+                        <span></span>
                     </h6>
                 </div>
             </div>
