--- a/index_test.html
+++ b/index_test.html
@@ -755,36 +755,16 @@
                     Commune de Ngaliema - Kinshasa<br>
                     République Démocratique du Congo<br>
                 </address>
-                <div class="footer-contact">
-                    <div class="under-line my-width-45">
-                        <a class="link-normal" href="#">info@kinshasadigital.com</a><br>
-                        <span></span>
-                    </div>
-                    <div class="under-line my-width-32">
-                        <a class="link-normal" href="#">+243 891 341 236</a><br>
-                        <span></span>
-                    </div>
+                <div>
+                    <a class="link-normal" href="#">info@kinshasadigital.com</a>
+                    <br>
+                    <a class="link-normal" href="#">+243 891 341 236</a>
                 </div>
-                <div class="row content-style-between my-width-30 margin-top-down-20 social-media">
-                    <div class="under-line">
-                        <a class="" href="#">
-                            <i class="fab fa-facebook-f"></i>
-                        </a><br>
-                        <span></span>
-                    </div>
-                    <div class="under-line">
-                        <a class="" href="#">
-                            <i class="fab fa-twitter"></i>
-                        </a><br>
-                        <span></span>
-                    </div>
-                    <div class="under-line">
-                        <a class="" href="#">
-                            <i class="fab fa-linkedin"></i>
-                        </a><br>
-                        <span></span>
-                    </div>
-                </div>
+                <p>
+                    <img src="img/svg/facebook.svg" alt="logo facebook">
+                    <img src="img/svg/twitter.svg" alt="logo twitter">
+                    <img src="img/svg/linkedin.svg" alt="logo linkedin">
+                </p>
             </div>
             <div class="my-width-45 margin-left-right-20">
                 <p class="text-light">
@@ -799,9 +779,8 @@
                     </form>
                 </div>
                 <div class="column content-style-end my-heigth-40">
-                    <h6 class="under-line my-width-26">
-                        <a class="link text-light" href="#">Mentions Légales</a><br>
-                        <span></span>
+                    <h6 class="">
+                        <a class="link text-light" href="#">Mentions Légales</a>
                     </h6>
                 </div>
             </div>
