Modif pages index et emploi fait. finalisation. reste quelques animations

--- a/index.html
+++ b/index.html
@@ -268,15 +268,96 @@
                     ce que nous avons développé
                 </h2>
                 <div class="row content-style-evenly padding-top-down-4">
-                    <p class="text-center">
-                        <img class="img-works radius-all-10" src="img/works/companyleagues.png" alt="companyleagues">
-                    </p>
-                    <p class="text-center">
-                        <img class="img-works radius-all-10" src="img/works/covid-dashboard.png" alt="covid-dashboard">
-                    </p>
-                    <p class="text-center">
-                        <img class="img-works radius-all-10" src="img/works/elan.png" alt="elan">
-                    </p>
+                    <!---->
+                    <div class="column item-style-center">
+                        <div class="column text-light item-style-center">
+                            <p class="text-center">
+                                <img class="img-works radius-all-10" src="img/works/companyleagues.png"
+                                    alt="companyleagues">
+                            </p>
+                            <div class="row my-width-80 content-style-between item-style-top text-center
+                            margin-top-moins-10">
+                                <div class="">
+                                    <p class="text-left text-mini-1">
+                                        client : Company leagues <br>
+                                        site : https//companyleagues.be
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="bg-red-light">
+                                        logo
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-pink my-width-80 padding-left-right-2 text-light">
+                            <p class="text-ubuntu-font">
+                                <i class="fab fa-elementor"></i>
+                                <span class="text-mini-1">Elementor</span>&nbsp;
+                                <i class="fab fa-wordpress"></i>
+                                <span class="text-mini-1">Wordpress</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                    <!---->
+                    <div class="column item-style-center">
+                        <div class="column text-light item-style-center">
+                            <p class="text-center">
+                                <img class="img-works radius-all-10" src="img/works/tandem.png" alt="site tandem">
+                            </p>
+                            <div class="row my-width-80 content-style-between item-style-top text-center
+                            margin-top-moins-10">
+                                <div class="">
+                                    <p class="text-left text-mini-1">
+                                        client : Tandem advertising <br>
+                                        site : https//tandemadvertising.com
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="bg-red-light">
+                                        logo
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-pink my-width-80 padding-left-right-2 text-light">
+                            <p class="text-ubuntu-font">
+                                <i class="fab fa-wordpress"></i>
+                                <span class="text-mini-1">Wordpress - (custom them)</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
+                    <!---->
+                    <div class="column item-style-center">
+                        <div class="column text-light item-style-center">
+                            <p class="text-center">
+                                <img class="img-works radius-all-10" src="img/works/elan.png" alt="elan">
+                            </p>
+                            <div class="row my-width-80 content-style-between item-style-top text-center
+                            margin-top-moins-10">
+                                <div class="">
+                                    <p class="text-left text-mini-1">
+                                        client : Elan RDC <br>
+                                        site : https//elanrdc.co
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="bg-red-light">
+                                        logo
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-pink my-width-80 padding-left-right-2 text-light">
+                            <p class="text-ubuntu-font">
+                                <i class="fab fa-squarespace"></i>
+                                <span class="text-mini-1">Squarespace</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!---->
                 </div>
             </div>
             <!---->
