Modif pages index et emploi fait. finalisation. reste quelques animations

--- a/index.html
+++ b/index.html
@@ -283,9 +283,10 @@
                                         site : https//companyleagues.be
                                     </p>
                                 </div>
-                                <div>
-                                    <p class="bg-red-light">
-                                        logo
+                                <div class="flag-box">
+                                    <p class="bg-light radius-left-10">
+                                        <img class="logo-minify" src="img/flags/flag_france.svg"
+                                            alt="RDC flag">&nbsp;<span class="text-mini-1 text-bold">FR</span>
                                     </p>
                                 </div>
                             </div>
@@ -314,9 +315,10 @@
                                         site : https//tandemadvertising.com
                                     </p>
                                 </div>
-                                <div>
-                                    <p class="bg-red-light">
-                                        logo
+                                <div class="flag-box">
+                                    <p class="bg-light radius-left-10">
+                                        <img class="logo-minify" src="img/flags/flag_belgique.svg"
+                                            alt="RDC flag">&nbsp;<span class="text-mini-1 text-bold">BE</span>
                                     </p>
                                 </div>
                             </div>
@@ -343,9 +345,10 @@
                                         site : https//elanrdc.co
                                     </p>
                                 </div>
-                                <div>
-                                    <p class="bg-red-light">
-                                        logo
+                                <div class="flag-box">
+                                    <p class="bg-light radius-left-10">
+                                        <img class="logo-minify" src="img/flags/flag_rdc.svg" alt="RDC flag">&nbsp;<span
+                                            class="text-mini-1 text-bold">RDC</span>
                                     </p>
                                 </div>
                             </div>
