Modif pages index et emploi fait. finalisation.

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <!---->
             <div class="bg-red padding-top-down-10">
                 <h2 class="text-center text-light">
-                    ce que nous avons développé
+                    Ce que nous avons développé
                 </h2>
                 <div class="row content-style-evenly padding-top-down-4">
                     <!---->
